<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Score.GameScoreboardActivity">


    <TextView
        android:id="@+id/ScoreboardTitleLabel"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/scoreboard"
         />

    <Button
        android:id="@+id/MyScoreboardLabel"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_below="@id/InstructionsLabel"
        android:text="@string/my_scoreboard"
         />

    <Button
        android:id="@+id/SlidingTilesScoreboardLabel"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/MyScoreboardLabel"
        android:layout_marginTop="30dp"
        android:text="@string/sliding_tiles_scoreboard"
         />

    <Button
        android:id="@+id/SimonScoreboardLabel"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/SlidingTilesScoreboardLabel"
        android:layout_marginTop="30dp"
        android:text="Simon Scoreboard"
        />

    <Button
        android:id="@+id/MinesweeperScoreboard"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/SimonScoreboardLabel"
        android:layout_marginTop="30dp"
        android:text="Minesweeper Scoreboard"
        />

    <TextView
        android:id="@+id/InstructionsLabel"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerVertical="true"
        android:layout_below="@id/ScoreboardTitleLabel"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:text="@string/please_select_the_scoreboard_you_want_to_see"
         />

    <Button
        android:id="@+id/MainMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_main_menu"
        />
</RelativeLayout>