<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Score.UserScoreboardActivity">



    <TextView
        android:id="@+id/TitleYourScoreboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:text="@string/your_scoreboard"
        android:layout_centerHorizontal="true"
       />

    <Button
        android:id="@+id/buttonMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="goToScoreboardMenu"
        android:text="@string/back" />

    <TextView
        android:id="@+id/GameLabel"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/TitleYourScoreboard"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/game" />

    <TextView
        android:id="@+id/ScoreHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TitleYourScoreboard"
        android:layout_alignRight="@id/GameLabel"
        android:layout_marginTop="10dp"
        android:text="@string/scores"
        />

    <TextView
        android:id="@+id/SlidingTilesGameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/sliding_tiles"
        android:layout_below="@id/GameLabel"
         />

    <TextView
        android:id="@+id/SlidingScoreLabel"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_1000"
        android:layout_alignRight="@id/SlidingTilesGameLabel"
        android:layout_below="@id/ScoreHeader"
        android:layout_alignParentRight="true"
         />

    <TextView
        android:id="@+id/SimonGameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/SlidingTilesGameLabel"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="Simon" />

    <TextView
        android:id="@+id/SimonScoreLabel"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_1000"
        android:layout_alignRight="@id/SimonGameLabel"
        android:layout_below="@id/SlidingScoreLabel"
        android:layout_alignParentRight="true"
        />

    <TextView
        android:id="@+id/MinesweeperGameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/SimonGameLabel"
        android:text="Minesweeper"/>

    <TextView
        android:id="@+id/MinesweeperScoreLabel"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_1000"
        android:layout_alignRight="@id/MinesweeperGameLabel"
        android:layout_below="@id/SimonScoreLabel"
        android:layout_alignParentRight="true"
        />
</RelativeLayout>