<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Score.UserScoreboardActivity"
    android:layout_margin="10dp">



    <TextView
        android:id="@+id/TitleYourScoreboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/your_scoreboard"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textSize="40dp"
        />

    <Button
        android:id="@+id/buttonMenu"
        style="@style/AppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToScoreboardMenu"
        android:padding="10dp"
        android:text="Back"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:paddingLeft="10dp"
        android:background="@color/FoxYellow"
        android:paddingRight="10dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="1"
        android:id="@+id/NameColumns"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/mainColumns"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">
        <TextView
            android:id="@+id/GameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="left"
            android:text="@string/game"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/ScoreHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scores"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="right"
            android:textSize="18dp"/>

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        android:id="@+id/mainColumns"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        >

        <TextView
            android:id="@+id/SlidingTilesGameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sliding_tiles"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="left"
            android:textSize="15dp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:id="@+id/SlidingScoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1000"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="right"
            android:textSize="15dp"
            android:layout_marginBottom="10dp"

        />

        <TextView
            android:id="@+id/SimonGameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Simon"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="left"
            android:textSize="15dp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:id="@+id/SimonScoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1000"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="right"
            android:textSize="15dp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:id="@+id/MinesweeperGameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Minesweeper"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="left"
            android:textSize="15dp"
            android:layout_marginBottom="10dp"

            />

        <TextView
            android:id="@+id/MinesweeperScoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1000"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="right"
            android:textSize="15dp"
            android:layout_marginBottom="10dp"
            />
    </GridLayout>


</RelativeLayout>